# sccpp

./: .gitignore  CMakeLists.txt  README.md
ffmpeg/: README.md  download.ps1
include/: decoder.h  device.h  logger.h  renderer.h  socket.h
sdl/: README.md  download.ps1
src/: decoder.cpp  device.cpp  logger.cpp  main.cpp  renderer.cpp  socket.cpp
